| Summary: | ASTERISK-26685: res_pjsip: Crash when using IPv6 and Transport ws,wss | ||||
| Reporter: | Michael Balen (aeinstein) | Labels: | |||
| Date Opened: | 2016-12-31 13:23:04.000-0600 | Date Closed: | 2017-03-14 18:51:26 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Resources/res_pjsip | ||
| Versions: | 13.9.0 13.13.1 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | WSS over IPv6 or IPv6 via WS through Stunnel Qualify is set to 30sec for endpoint | Attachments: | ( 0) astdb_contents.txt ( 1) backtrace.txt | ||
| Description: | <partial backtrace removed>
When register via ws or wss @asterisk with jssip-0.3 within IPv6 infrastructure segfault occurs. After that asterisk crash aprox 30 sec after next start with the same segfault in line 337 (without connecting anymore or anything). I think it want to test the reachablity of the astdb entries because of qualify. To make asterisk run again, I had to delete the astdb.sqlite file manually. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2016-12-31 13:23:04.505-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Michael Balen (aeinstein) 2016-12-31 13:31:57.525-0600 These are some records values. The first ist what is left when I register via IPv4. The others when register with IPv6 By: Friendly Automation (friendly-automation) 2017-03-14 18:51:26.977-0500 Change 5134 merged by Joshua Colp: res_pjsip_transport_websocket: Add support for IPv6. [https://gerrit.asterisk.org/5134|https://gerrit.asterisk.org/5134] By: Friendly Automation (friendly-automation) 2017-03-14 20:07:55.901-0500 Change 5135 merged by Joshua Colp: res_pjsip_transport_websocket: Add support for IPv6. [https://gerrit.asterisk.org/5135|https://gerrit.asterisk.org/5135] By: Friendly Automation (friendly-automation) 2017-03-14 21:23:33.510-0500 Change 5136 merged by zuul: res_pjsip_transport_websocket: Add support for IPv6. [https://gerrit.asterisk.org/5136|https://gerrit.asterisk.org/5136] | ||||